--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div class="calculator">
+    <input type="text" id="result" readonly>
+    <div class="buttons">
+      <button onclick="number('1')">1</button>
+      <button onclick="number('2')">2</button>
+      <button onclick="number('3')">3</button>
+      <button onclick="number('+')">+</button>
+      <button onclick="number('4')">4</button>
+      <button onclick="number('5')">5</button>
+      <button onclick="number('6')">6</button>
+      <button onclick="number('-')">-</button>
+      <button onclick="number('7')">7</button>
+      <button onclick="number('8')">8</button>
+      <button onclick="number('9')">9</button>
+      <button onclick="number('*')">*</button>
+      <button onclick="number('/')">/</button>
+      <button onclick="number('0')">0</button>
+      <button onclick="calculate()">=</button>
+      <button onclick="clearScreen()">C</button>
+
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
+    
